--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,22 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Postagens</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content padding>  
+  <ion-list insert>
+    <ion-item *ngFor="let p of posts">
+      <ion-card>
+        <ion-card header>
+          {{p.title}}
+        </ion-card>
+        <ion-card-content>
+          {{p.body}}
+        </ion-card-content>
+      </ion-card>
+    </ion-item>
+  </ion-list>  
+
 </ion-content>
+
