--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Postagens" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Cadastrar" tabIcon="md-add-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Editar" tabIcon="md-create"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Pesquisar" tabIcon="search"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Sair" tabIcon="md-log-out" (click)="logout()"></ion-tab>
 </ion-tabs>
